# linfa_ml_starter

./: .gitignore  Cargo.toml  readme.md
datasets/: .~lock.water_potability.csv#
jupyter/: titanic.ipynb
src/: lib.rs  main.rs
src/dataframe/: dataframe.rs
src/linear/: water_potability.rs
src/model/: model.rs
