[package]
name = "ml_linfa_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
linfa = "0.7.0"
linfa-datasets = { version = "0.7.0", features = ["winequality", "diabetes"] }
linfa-linear = "0.7.0"
linfa-logistic = "0.7.0"
linfa-svm = "0.7.0"
ndarray = "0.15"
ndarray-csv = "=0.5.1"
plotters = "0.3.3"

[[bin]]
name = "linear_water_potability"
path = "./src/linear/water_potability.rs"
