[package]
name = "ml_linfa_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
linfa = "0.7.0"
linfa-datasets = { version = "0.7.0", features = ["winequality", "diabetes"] }
linfa-linear = "0.7.0"
polars = { version = "0.34.2", features = ["ndarray"] }
linfa-logistic = "0.7.0"
linfa-svm = "0.7.0"
ndarray = "0.15"
ndarray-csv = "=0.5.1"
plotters = "0.3.3"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
